# usbipd

./: .clang-format  .config  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Kconfig  README.md
components/Program/: CMakeLists.txt
components/debug_probe/: CMakeLists.txt  compiler.h  debug_gpio.c  debug_gpio.h
components/debug_probe/DAP/Config/: DAP_config.h
components/debug_probe/DAP/Include/: DAP.h
components/debug_probe/DAP/Source/: DAP.c
components/gdb_server/: CMakeLists.txt
components/gdb_server/src/: gdb_stub.c
components/usbipd/: CMakeLists.txt
components/usbipd/include/: usbip_common.h  usbip_conn.h  usbip_control.h  usbip_devmgr.h  usbip_server.h  usbip_util.h  usbipd.h
components/usbipd/include/hal/: usbip_log.h  usbip_osal.h  usbip_transport.h
components/usbipd/priv/: usbip_conn.h  usbip_pack.h  usbip_urb.h
components/usbipd/src/: bulk_dap.c  hid_dap.c  usbip_util.c
components/usbipd/src/device/: usbip_bulk.c  usbip_hid.c
components/usbipd/src/hal/: usbip_log.c  usbip_mempool.c  usbip_osal.c  usbip_transport.c
components/usbipd/src/platform/posix/: osal_posix.c  transport_tcp.c
components/usbipd/src/server/: usbip_conn.c  usbip_control.c  usbip_devmgr.c  usbip_pack.c  usbip_server.c  usbip_urb.c  usbipd.c
docs/: ARCHITECTURE.md  DAPLINK_PLAN.md  GDB_SERVER_PORTING.md  PLAN.md  PROGRAM_COMPONENT.md  PYOCD_COMPATIBILITY.md  README_zh.md  RECONSTRUCT.md  multi-client-architecture.md  usbipd_flowcharts.md
include/: usbip_common.h  usbip_control.h  usbip_devmgr.h  usbip_hid.h  usbip_protocol.h  usbip_server.h
include/hal/: usbip_log.h  usbip_osal.h  usbip_transport.h
scripts/: gen_config.py
src/: bulk_dap.c  hid_dap.c  main.c  osal_espidf.c  osal_posix.c  transport_espidf.c  transport_tcp.c
src/device/: usbip_bulk.c  usbip_hid.c
src/hal/: usbip_mempool.c  usbip_osal.c  usbip_transport.c
src/server/: usbip_control.c  usbip_devmgr.c  usbip_protocol.c  usbip_server.c  usbip_urb.c
